# 0.1.1

- Fix `cursor: pointer;` bug.

# 0.1.0

- Initial release.