@@ -44,6 +44,11 @@
     </ul>
   </p>
 
+  <p>
+    <span style='font-size:2em;vertical-align:middle;'>&#9756;</span>
+    <a href="https://github.com/davidtheclark/react-aria-modal" style='vertical-align:middle;'>Return to the repository.</a>
+  </p>
+
   <h2>
     demo one
   </h2>
@@ -110,6 +115,14 @@
     mounting and unmounting.
   </p>
   <div id="demo-four"></div>
+
+  <h2>
+    demo five
+  </h2>
+  <p>
+    This modal uses some custom classes and special <code>onEnter</code> and <code>onExit</code> functions to enable nice transitions.
+  </p>
+  <div id="demo-five"></div>
 
   <script src="demo-bundle.js"></script>
 </body>
