@@ -2,3 +2,4 @@ require('./demo-one');
 require('./demo-two');
 require('./demo-three');
 require('./demo-four');
+require('./demo-five');
