@@ -14,7 +14,6 @@
   padding: 0.5em 1.5em;
 }
 
-
 .modal-header {
   border-bottom: 1px solid #eee;
 }
@@ -26,4 +25,28 @@
 .modal-footer {
   border-top: 1px solid #eee;
   text-align: right;
+}
+
+.modal--animated {
+  opacity: 0;
+  transform: scale(1.1) translateY(-10px);
+  -webkit-transform: scale(1.1) translateY(-10px);
+  transition: all 0.3s linear;
+  -webkit-transition: all 0.3s linear;
+}
+
+.modal--animated.has-entered {
+  opacity: 1;
+  transform: scale(1) translateY(0);
+  -webkit-transform: scale(1) translateY(0);
+}
+
+.underlay {
+  background-color: rgba(0, 0, 0, 0);
+  transition: all 0.3s linear;
+  -webkit-transition: all 0.3s linear;
+}
+
+.underlay.has-entered {
+  background-color: rgba(0, 0, 0, 0.5);
 }
