@@ -1,5 +1,1 @@
-var React = require('react');
-var displace = require('react-displace');
-var Modal = require('./lib/Modal');
-
-module.exports = displace(Modal);
+module.exports = require('./lib/Modal');
