@@ -1,5 +1,6 @@
 var React = require('react');
 var FocusTrap = require('focus-trap-react');
+var displace = require('react-displace');
 var noScroll = require('no-scroll');
 
 var PropTypes = React.PropTypes;
@@ -11,10 +12,11 @@ var Modal = React.createClass({
     alert: PropTypes.bool,
     focusDialog: PropTypes.bool,
     initialFocus: PropTypes.string,
+    onEnter: PropTypes.func,
     titleId: PropTypes.string,
     titleText: PropTypes.string,
     underlayClass: PropTypes.string,
-    underlayColor: PropTypes.string,
+    underlayColor: PropTypes.oneOfType([PropTypes.string, PropTypes.bool]),
     underlayClickExits: PropTypes.bool,
     verticallyCenter: PropTypes.bool,
   },
@@ -34,6 +36,12 @@ var Modal = React.createClass({
     noScroll.on();
   },
 
+  componentDidMount: function() {
+    if (this.props.onEnter) {
+      this.props.onEnter();
+    }
+  },
+
   checkClick: function(e) {
     if (React.findDOMNode(this.refs.dialog).contains(e.target)) return;
     this.props.onExit()
@@ -48,7 +56,6 @@ var Modal = React.createClass({
     var underlayProps = {
       className: this.props.underlayClass,
       style: {
-        background: this.props.underlayColor,
         position: 'fixed',
         top: 0,
         left: 0,
@@ -60,6 +67,10 @@ var Modal = React.createClass({
         WebkitOverflowScrolling: 'touch',
       },
     };
+
+    if (this.props.underlayColor) {
+      underlayProps.style.background = this.props.underlayColor;
+    }
 
     if (this.props.underlayClickExits) {
       underlayProps.style.cursor = 'pointer';
@@ -83,6 +94,7 @@ var Modal = React.createClass({
         margin: 'auto',
         WebkitTransform: transformValue,
         transform: transformValue,
+        cursor: 'default',
       },
     };
 
@@ -109,4 +121,4 @@ var Modal = React.createClass({
   },
 });
 
-module.exports = Modal;
+module.exports = displace(Modal);
