@@ -1,7 +1,7 @@
 {
   "name": "react-aria-modal",
   "version": "0.1.1",
-  "description": "A fully flexible and accessible React modal built according WAI-ARIA Authoring Practices",
+  "description": "A fully accessible and flexible React modal built according WAI-ARIA Authoring Practices",
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
@@ -9,9 +9,6 @@
     "demo-watch": "watchify demo/js -d -t babelify --extension=.jsx -o demo/demo-bundle.js",
     "demo-bs": "browser-sync start --server demo --files=\"demo/**/*.css,demo/index.html,demo/demo-bundle.js\"",
     "demo-dev": "parallelshell \"npm run demo-watch\" \"npm run demo-bs\"",
-    "test-bundle": "browserify test -t babelify -o test/test-bundle.js --extension=.jsx",
-    "test-dev": "watchify test -d -t babelify -o test/test-bundle.js -v --extension=.jsx",
-    "test-single": "karma start --single-run",
     "pretest": "npm run lint",
     "test": "npm run test-bundle && npm run test-single"
   },
@@ -43,15 +40,8 @@
     "babelify": "6.1.3",
     "browser-sync": "2.8.2",
     "browserify": "11.0.1",
-    "es5-shim": "4.1.10",
     "eslint": "1.1.0",
-    "karma": "0.13.9",
-    "karma-phantomjs-launcher": "0.2.1",
-    "karma-tap": "1.0.3",
     "parallelshell": "2.0.0",
-    "phantomjs": "1.9.18",
-    "sinon": "1.15.4",
-    "tape": "4.2.0",
     "watchify": "3.3.1"
   }
 }
